--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "start": "electron ."
   },
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "npm": "^5.8.0",
+    "to": "^0.2.9",
+    "update": "^0.7.4"
+  },
+  "devDependencies": {
+    "electron": "^1.8.4"
   }
 }
